metaタグの内容変更

--- a/kadai_022/kadai_022.html
+++ b/kadai_022/kadai_022.html
@@ -2,7 +2,8 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="このページは22章の課題です。, width=device-width, initial-scale=1.0">
+  <meta name="viewport" content= "width=device-width, initial-scale=1.0">
+  <meta name="discription" content="このページは22章の課題です。">
   <title>22章課題</title>
   <link rel="stylesheet" href="style.css">
 </head>
